# compact

./: .gitignore  CMakeLists.txt  README.md  compact.txt
Compact/: CMakeLists.txt  Main.cpp  MeasureSec.cpp  SymbolData.cpp  SymbolData.h  SymbolDataTest.cpp
Source/: CMakeLists.txt  Main.cpp  MeasureSec.h  SymbolData.cpp  SymbolDataTest.cpp  SymbolDataTest.h  definitions.txt
